# OptSuite

./: README.md
optsuite/: .gitignore  .gitmodules  CMakeLists.txt  README.md
optsuite/.github/workflows/: jobs.yml
optsuite/cmake/: FindARPACK.cmake  FindLAPACKE.cmake  FindSuiteSparse.cmake  optsuite_utils.cmake
optsuite/example/: CMakeLists.txt  LogisticRegression_L1.cpp  LogisticRegression_L2.cpp  glasso-colwise.cpp  glasso.cpp  lasso.conf  mc.conf  mc_h.conf
optsuite/example/matlab/: CMakeLists.txt  lasso.cpp  matcomp.cpp  wf.cpp
optsuite/include/OptSuite/: api_macro.h  core_macro_n.h  core_n.h
optsuite/include/OptSuite/.ssnsdp/: buffer.h  cell_array.h  chol_solver.h  core.h  core_macro.h  eig.h  geomean.h  grad_phi.h  inner_product.h  log.h  mapping.h  mkl_dense.h  mkl_sparse.h  mkl_wrapper.h  model.h  newton_direction.h  projection.h  read_model.h  read_sdpa.h  read_ssnsdp.h  smat.h  solver_base.h  ssnsdp.h  svec.h
optsuite/include/OptSuite/Base/: base.h  cell_array.h  factorized_mat.h  functional.h  fwddecl.h  mat_array.h  mat_op.h  mat_wrapper.h  model.h  object_wrapper.h  scalar_wrapper.h  shared_spmat.h  spmat_wrapper.h  spmat_wrapper_mkl.h  structure.h  variable.h  variable_ref.h  variable_ref_cwiseop.h
optsuite/include/OptSuite/Base/func/: LogisticRegression.h  axmb_norm_sqr.h  ball_lp.h  base.h  lp_norm.h  maximal.h  nuclear_norm.h  probability_simplex.h  projection_omega.h  shrinkage_lp.h  shrinkage_nuclear.h  simple.h
optsuite/include/OptSuite/Base/private/: object_wrapper_finder.h  to_string.h  type_test.h
optsuite/include/OptSuite/Composite/Model/: base.h  lasso.h  logistic_regression_l1.h  logistic_regression_l2.h  mat_comp.h
optsuite/include/OptSuite/Composite/Solver/: FISTA.h  Nesterov_2nd.h  proxgbb.h
optsuite/include/OptSuite/Interface/: matlab.h
optsuite/include/OptSuite/Interface/private/: matlab.h
optsuite/include/OptSuite/LinAlg/: arpack.h  cholmod_wrapper.h  fftw_wrapper.h  lansvd.h  mkl_sparse.h  power_method.h  rng_wrapper.h
optsuite/include/OptSuite/LinAlg/private/: fftw_impl.h
optsuite/include/OptSuite/Utils/: geomean.h  json_formatter.h  logger.h  optionchecker.h  optionlist.h  rbio.h  str_format.h
optsuite/scripts/: docker_centos.sh
optsuite/src/Base/: base.cpp  factorized_mat.cpp  mat_array.cpp  mat_op.cpp  mat_wrapper.cpp  scalar_wrapper.cpp  spmat_wrapper.cpp  variable.cpp
optsuite/src/Base/func/: LogisticRegression.cpp  axmb_norm_sqr.cpp  ball_lp.cpp  base.cpp  lp_norm.cpp  maximal.cpp  nuclear_norm.cpp  probability_simplex.cpp  projection_omega.cpp  shrinkage_lp.cpp  shrinkage_nuclear.cpp  simple.cpp
optsuite/src/Composite/Model/: lasso.cpp  logistic_regression_l1.cpp  logistic_regression_l2.cpp  mat_comp.cpp
optsuite/src/Composite/Solver/: FISTA.cpp  Nesterov_2nd.cpp  nesterov1.txt  nesterov2.txt  proxgbb.cpp
optsuite/src/Interface/: matlab.cpp
optsuite/src/LinAlg/: arpack.cpp  cholmod_wrapper.cpp  fftw_wrapper.cpp  lansvd.cpp  mkl_sparse.cpp  power_method.cpp  rng_wrapper.cpp
optsuite/src/Utils/: json_formatter.cpp  logger.cpp  optionchecker.cpp  optionlist.cpp  rbio.cpp
optsuite/src/libSVM/: svm.cpp
optsuite/test/: CMakeLists.txt  block.cpp  bool_var.cpp  json.cpp  log.cpp  mm.cpp  opt.cpp  random.cpp  struct.cpp  test.cpp  tictoc.cpp  var_ref.cpp
optsuite/test/arpack/: eigs.cpp
optsuite/test/fftw/: fft.cpp
optsuite/test/matlab/: CMakeLists.txt  readmat.cpp  svd.cpp
optsuite/test/mkl/: mkl_mul.cpp
optsuite/test/suitesparse/: cholmod.cpp
